# Partition-Complejidad-Computacional

./: .gitignore  3dm_to_partition  CMakeCache.txt  CMakeLists.txt  DOCUMENTATION.md  Makefile  README.md  cmake_install.cmake  diagram.mermaid  output_reduction.txt
include/: PartitionElement.h  PartitionInstance.h  PartitionWriter.h  ReductionPipeline.h  ReductionValidator.h  ThreeDMInstance.h  ThreeDMReader.h  ThreeDMToPartitionReducer.h  ThreeDMWriter.h  Triple.h
include/core/: PartitionInstance.h  Triple.h  partition_element.h  partition_instance.h  three_d_m_instance.h  triple.h
include/interfaces/: InstanceReader.h  ReductionStrategy.h  instance_reader.h  instance_solver.h  instance_writer.h  reduction_strategy.h
include/io/: PartitionReader.h  partition_reader.h  partition_writer.h  three_d_m_reader.h  three_d_m_writer.h
include/pipeline/: reduction_pipeline.h
include/reduction/: reduction_validator.h  three_d_m_to_partition_reducer.h
include/solvers/: PartitionSolver.h  SolutionVerifier.h  partition_solver.h  solution_verifier.h
instances/3DM/: 3dm-1.txt  3dm-2.txt  3dm-3.txt  3dm-invalid-1.txt  3dm-invalid-2.txt  3dm-invalid-3.txt  3dm-invalid-4.txt  3dm-invalid-5.txt  output_partition.txt
instances/Partition/: partition-1.txt  partition-invalid-1.txt  partition-invalid-2.txt  partition-invalid-3.txt  partition-invalid-4.txt  partition-invalid-5.txt  partition-invalid-6.txt  partition-simple.txt
src/: interactive_shell_main.cc  partition_main  partition_main.cc  reduction_test_main.cc  three_d_m_main.cc
src/core/: partition_element.cc  partition_instance.cc  three_d_m_instance.cc  triple.cc
src/io/: partition_reader.cc  partition_writer.cc  three_d_m_reader.cc  three_d_m_writer.cc
src/reduction/: three_d_m_to_partition_reducer.cc
